syntax = "proto3";
package serialize;
option go_package = "./pb";

message Message{
    string ts = 1;
    string form_name = 2;
    string file_name = 3;
    bytes field_value = 4;
    bool last = 5;
}