syntax = "proto3";

package rpc;

option go_package = "./pb";

import "internal/adapters/driver/rpc/proto/msg.proto";

service Saver {
    rpc singlePart(TextFieldReq) returns (TextFieldRes) {};
    rpc multiPart(stream FileUploadReq) returns (FileUploadRes) {};
}